Created get all songs on webAPI

--- a/LiturgicalMusic.WebAPI/src/index.html
+++ b/LiturgicalMusic.WebAPI/src/index.html
@@ -1,25 +1,26 @@
 ﻿<!DOCTYPE html>
 <html>
-  <head>
-    <title>Angular QuickStart</title>
-    <base href="/src/">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <head>
+        <title>Liturgijska glazba</title>
+        <base href="/src/">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 
-    <!-- Polyfill(s) for older browsers -->
-    <script src="/node_modules/core-js/client/shim.min.js"></script>
+        <!-- Polyfill(s) for older browsers -->
+        <script src="/node_modules/core-js/client/shim.min.js"></script>
 
-    <script src="/node_modules/zone.js/dist/zone.js"></script>
-    <script src="/node_modules/systemjs/dist/system.src.js"></script>
+        <script src="/node_modules/zone.js/dist/zone.js"></script>
+        <script src="/node_modules/systemjs/dist/system.src.js"></script>
 
-    <script src="systemjs.config.js"></script>
-    <script>
-      System.import('main.js').catch(function(err){ console.error(err); });
-    </script>
-  </head>
+        <script src="systemjs.config.js"></script>
+        <script>
+               System.import('main.js').catch(function (err) { console.error(err); });
+        </script>
+    </head>
 
-  <body>
-    <my-app>Loading AppComponent content here ...</my-app>
-  </body>
+    <body>
+        <liturgical-music>Loading...</liturgical-music>
+    </body>
 </html>
