search song by title

--- a/LiturgicalMusic.WebAPI/src/index.html
+++ b/LiturgicalMusic.WebAPI/src/index.html
@@ -25,6 +25,6 @@
     </head>
 
     <body>
-        <liturgical-music>Loading...</liturgical-music>
+        <liturgical-music>Učitavanje...</liturgical-music>
     </body>
 </html>
